<resources>
    <string name="app_name">weTalk</string>
    <string name="user_name">aviya elgrably</string>
    <string name="nickname">Shachar Moreshet</string>
    <string name="last_message">Hi, how are you?</string>
    <string name="login_userName">Username</string>
    <string name="login_password">Password</string>
    <string name="messageInput">Type message here</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_button">Login</string>
    <string name="signUp_button">Sign Up</string>
    <string name="go_to_signIn">Already registered?</string>
    <string name="logo_text">We Talk</string>
    <string name="nick_name">Nickname</string>
    <string name="register_btn">Not here? click to sign up</string>
    <string name="add_contact">Add contact</string>
    <string name="add">Add</string>
    <string name="back_to_chat_list">Back to chats list</string>
    <string name="IP">IP</string>
    <string name="port">Port</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="choose_server">Choose server:</string>
    <string name="choose_theme">Choose Theme:</string>
    <string name="default_image">Default image</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">Main Channel</string>
    <string name="BaseUrl">http://10.0.2.2:5013/api/</string>
</resources>