<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="70dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/settings"
        android:background="@color/noColor"
        android:textColor="@color/blue"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/noColor"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chooseServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/choose_server"
            android:textStyle="bold"
            android:background="@color/noColor"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/IP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/IP"
            android:inputType="number" />

        <EditText
            android:id="@+id/Port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/port"
            android:inputType="number" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/choose_theme"
            android:background="@color/noColor"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/noColor"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="7dp"
                android:background="@color/noColor"
                app:srcCompat="@drawable/cloudy" />
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/noColor"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="-50dp"
                app:srcCompat="@drawable/sun" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/noColor"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/btg_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@color/noColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selectionRequired="true"
                    app:singleSelection="true">
                    <!--                <Button-->
                    <!--                    android:id="@+id/btnDefualt"-->
                    <!--                    android:gravity="center"-->
                    <!--                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:text="Default" />-->
                    <Button
                        android:id="@+id/btnDark"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Dark" />
                    <Button
                        android:id="@+id/btnLight"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Light" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/btn_color"
            android:fontFamily="monospace"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textSize="20dp"

            />

        <com.google.android.material.chip.Chip
            android:id="@+id/backToList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:text="@string/back_to_chat_list" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>